Make one_element_channel::set optionally asynchronous
- adding beginnings of a generator example

--- a/examples/quickstart/CMakeLists.txt
+++ b/examples/quickstart/CMakeLists.txt
@@ -25,6 +25,7 @@ set(example_programs
     fibonacci_futures_distributed
     fractals
     fractals_struct
+    generator
     init_globally
     sierpinski
     interest_calculator
